--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ h6 {
 /*** NAVBAR START ***/
 
 #nav {
-  height: 80px;
+  height: 65px;
   width: 100%;
   background: var(--secondary-background);
   color: #fff;
@@ -150,8 +150,8 @@ h6 {
   transition: 0.3s opacity linear;
 }
 .logo img {
-  height: 80px;
-  width: 90px;
+  height: 70px;
+  width: 70px;
   object-fit: contain;
   object-position: center;
 }
@@ -198,8 +198,8 @@ h6 {
   box-shadow: var(--text-shadow);
 }
 #nav-part--2 a {
-  font-size: 18px;
-  font-weight: 300;
+  font-size: 17px;
+  font-weight: 500;
   text-decoration: none;
   color: #fff;
   font-family: poppins;
@@ -210,6 +210,17 @@ h6 {
   overflow: hidden;
   padding: 5px 10px;
   border-radius: 30px;
+}
+#nav-part--2 a.active{
+  font-size: 18px;
+  font-weight: 600;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+}
+#nav-part--3 #contactBtn a button{
+  border-radius: 6px;
+  padding: 6px 18x;
+  font-size: 24px;
 }
 #cta {
   position: absolute;
@@ -1715,7 +1726,7 @@ h6 {
   /*** NAVBAR START ***/
 
   #nav {
-    height: 80px;
+    height: 60px;
     width: 100%;
     background: var(--secondary-background);
     box-shadow: 0px 16px 8px -3px rgba(0, 0, 0, 0.1);
@@ -1727,8 +1738,8 @@ h6 {
     z-index: 1;
   }
   .logo img {
-    height: 60px;
-    width: 70px;
+    height: 55px;
+    width: 55px;
     object-fit: contain;
     object-position: center;
   }
@@ -1777,6 +1788,16 @@ h6 {
     text-decoration: none;
     color: white;
     font-family: poppins;
+  }
+  #nav-part--2 a.active{
+    font-size: 36px;
+    font-weight: 900;
+    color: #000;
+  }
+  #nav-part--3 #contactBtn a button{
+    border-radius: 5px;
+    padding: 6px 16x;
+    font-size: 22px;
   }
 
   /*** NAVBAR END ***/
